# CyNativePlayer

./: CMakeLists.txt  README.md  build-nativeplayer.sh  config.sh
example/: CMakeLists.txt
example/src/: AndroidManifest.xml  main.cpp  main.h
include/NativePlayer/: NativePlayer.h
nativeplayer/: CMakeLists.txt  NativePlayer.c  NativePlayer.h
nativeplayer/include/CypressNCPlayer/: cypress_nc_player.h
nativeplayer/src/: cypress_nc_player.c
nativeplayer/src/ijkplayer/ijkj4a/: CMakeLists.txt
nativeplayer/src/ijkplayer/ijkj4a/j4a/: j4a_allclasses.loader.h  j4a_base.c  j4a_base.h
nativeplayer/src/ijkplayer/ijkj4a/j4a/class/android/media/: AudioTrack.c  MediaCodec.c
nativeplayer/src/ijkplayer/ijkj4a/j4a/class/android/os/: Build.c  Bundle.c
nativeplayer/src/ijkplayer/ijkj4a/j4a/class/java/nio/: Buffer.c
nativeplayer/src/ijkplayer/ijkj4a/j4a/class/java/util/: ArrayList.c
nativeplayer/src/ijkplayer/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IAndroidIO.c
nativeplayer/src/ijkplayer/ijkplayer/: CMakeLists.txt  backtrace.c  ff_fferror.c  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ijkplayer.c  ijkplayer.h  ijkplayer_internal.h  ijkversion.h
nativeplayer/src/ijkplayer/ijkplayer/android/: ijkplayer_android.h  ijkplayer_jni.c
nativeplayer/src/ijkplayer/ijkplayer/libavformat/: avio_internal.h  internal.h  network.h
nativeplayer/src/ijkplayer/ijksdl/: CMakeLists.txt  ijksdl_aout.h  ijksdl_egl.c  ijksdl_extra_log.c  ijksdl_extra_log.h  ijksdl_inc_internal.h  ijksdl_log.h  ijksdl_misc.h  ijksdl_thread.c  ijksdl_timer.c
nativeplayer/src/ijkplayer/ijksdl/android/: OpenSLES_Spatial.h  android_audiotrack.h  android_nativewindow.h  ijksdl_android_jni.c  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_audiotrack_latency_estimator.c  ijksdl_aout_android_audiotrack_latency_estimator.h  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec_dummy.c  ijksdl_codec_android_mediacodec_ndk.c  ijksdl_codec_android_mediacodec_ndk.h  ijksdl_codec_android_mediadef.h  ijksdl_codec_android_mediaformat_java.c  ijksdl_vout_android_nativewindow.c  resmgr.c
nativeplayer/src/ijkplayer/ijksdl/gles2/: common.c  renderer_rgb.c  shader.c
nativeplayer/src/ijkplayer/ijksoundtouch/: CMakeLists.txt
nativeplayer/src/ijkplayer/ijkyuv/: CMakeLists.txt
nativeplayer/src/ijkplayer/perf_monitor/: CMakeLists.txt
nativeplayer/src/ijkplayer/perf_monitor/include/perf_monitor/: perf_monitor.h
nativeplayer/src/ijkplayer/perf_monitor/src/: perf_monitor.cpp
nativeplayer/src/inc/utils/ncfence/: ncfence.h
nativeplayer/src/inc/utils/nclog/: log_util.h  nclog.h
nativeplayer/src/main/: AndroidManifest.xml
nativeplayer/src/utils/nclog/: log_util.c  nclog.c
src/: NativePlayer.c
src/ijkplayer/ijkj4a/: Android.mk  CMakeLists.txt
src/ijkplayer/ijkj4a/j4a/: j4a_allclasses.include.h
src/ijkplayer/ijkj4a/j4a/class/android/media/: AudioTrack.h  MediaFormat.c  PlaybackParams.c
src/ijkplayer/ijkj4a/j4a/class/java/nio/: ByteBuffer.c
src/ijkplayer/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.c
src/ijkplayer/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IMediaDataSource.c
src/ijkplayer/ijkj4a/j4au/class/android/media/: AudioTrack.util.c
src/ijkplayer/ijkplayer/: Android.mk  CMakeLists.txt  backtrace.h  ff_fferror.c  ff_fferror.h  ff_ffmsg.h  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ff_ffseek_mode.h  ijkplayer.c  ijkplayer.h
src/ijkplayer/ijkplayer/android/: ijkplayer_android.c
src/ijkplayer/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipeline_android.h  ffpipenode_android_mediacodec_vdec.c  h264_nal.h  hevc_nal.h
src/ijkplayer/ijkplayer/ijkavformat/: allformats.c  ijkioprotocol.c
src/ijkplayer/ijkplayer/libavformat/: id3v2.h  ijkutils.c
src/ijkplayer/ijkplayer/libavutil/: dict.c
src/ijkplayer/ijksdl/: Android.mk  CMakeLists.txt  ijksdl_aout.c  ijksdl_audio.h  ijksdl_egl.c  ijksdl_vout.h
src/ijkplayer/ijksdl/android/: android_audiotrack.c  android_nativewindow.c  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediacodec.h  ijksdl_codec_android_mediacodec_dummy.c  ijksdl_codec_android_mediacodec_internal.c  ijksdl_codec_android_mediacodec_java.c  ijksdl_codec_android_mediacodec_ndk.c  ijksdl_codec_android_mediaformat_ndk.c  ijksdl_codec_android_mediaformat_ndk.h  ijksdl_vout_android_surface.c  ijksdl_vout_android_surface.h  ijksdl_vout_overlay_android_mediacodec.c  resmgr.c  resmgr.h
src/ijkplayer/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
src/ijkplayer/ijksdl/gles2/: renderer.c  renderer_yuv420p.c  renderer_yuv420sp.c  renderer_yuv444p10le.c
src/ijkplayer/ijksoundtouch/: CMakeLists.txt  ijksoundtouch_log.h
src/ijkplayer/ijkyuv/: CMakeLists.txt
src/ijkplayer/ijkyuv/source/: convert.cc
src/ijkplayer/perf_monitor/: CMakeLists.txt
src/inc/ffmpeg/config_header/arm64-v8a/libffmpeg/: config.h
src/inc/ffmpeg/config_header/armeabi-v7a/libffmpeg/: config.h
src/inc/ffmpeg/config_header/x86_64/libffmpeg/: config.h
src/inc/utils/nclog/: log_util.h  nclog.h
src/utils/ncfence/: ncfence.c
src/utils/nclog/: log_util.c  nclog.c
